Travis needs permissions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,6 @@ android:
   # Specify one system emimage
   - sys-img-armeabi-v7a-android-26
   - sys-img-armeabi-v7a-android-17
+
+before_install:
+  - chmod +x gradlew
