--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: android
 android:
   components:
+    # The BuildTools version used by our project.
+    - build-tools-27.0.3
 
-  # The BuildTools version used by our project.
-  - build-tools-26.0.2
+    # The SDK version used to compile our project
+    - android-21
 
-  # The SDK version used to compile our project
-  - android-21
+    # Specify one system emimage
+    - sys-img-armeabi-v7a-android-26
+    - sys-img-armeabi-v7a-android-17
 
-  # Specify one system emimage
-  - sys-img-armeabi-v7a-android-26
-  - sys-img-armeabi-v7a-android-17
-
+  licenses:
+    - 'android-sdk-license-.+'
+    
 before_install:
   - chmod +x gradlew
