--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ android:
   components:
     - platform-tools
     - tools
-    
+
     # The BuildTools version used by our project.
     - build-tools-27.0.3
 
@@ -19,3 +19,4 @@ android:
 
 before_install:
   - chmod +x gradlew
+  - yes | sdkmanager "platforms;android=28"
