--- a/.travis.yml
+++ b/.travis.yml
@@ -2,27 +2,26 @@ language: android
 android:
   components:
     - tools
+    - tools # Needs to be included twice.
     - platform-tools
-    - tools
-
-    # The BuildTools version used by our project.
-    - build-tools-28.0.3
-
-    # The SDK version used to compile our project
-    - android-21
+    - build-tools-27.0.3   # The BuildTools version used by our project.
+    - android-27 # The SDK version used to compile our project
 
     # Specify one system emimage
     # - sys-img-armeabi-v7a-android-26
     # - sys-img-armeabi-v7a-android-17
 
-  licenses:
-    - android-sdk-preview-license-.+
-    - android-sdk-license-.+
-    - google-gdk-license-.+
+licenses:
+  - android-sdk-preview-license-.+
+  - android-sdk-license-.+
+  - google-gdk-license-.+
 
 notifications:
   email: false
 
 before_install:
   - chmod +x gradlew
-  # - yes | sdkmanager "platforms;android=28"
+  - yes | sdkmanager "platforms;android=27"
+
+script:
+   - ./gradlew build connectedCheck
