--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ android:
     - android-28 # The SDK version used to compile our project
 
     # Specify one system emimage
-    # - sys-img-armeabi-v7a-android-26
+    - sys-img-armeabi-v7a-android-26
     # - sys-img-armeabi-v7a-android-17
 
 licenses:
