--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,22 @@
 language: android
+
+env:
+  global:
+   - ANDROID_API_LEVEL=28
+   - EMULATOR_API_LEVEL=26
+   - ANDROID_BUILD_TOOLS_VERSION=27.0.3
+
 android:
   components:
     - tools
     - tools # Needs to be included twice.
     - platform-tools
-    - build-tools-27.0.3   # The BuildTools version used by our project.
-    - android-28 # The SDK version used to compile our project
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
+    - android-$EMULATOR_API_LEVEL
 
     # Specify one system emimage
     - sys-img-armeabi-v7a-android-26
-    - sys-img-armeabi-v7a-android-17
 
 licenses:
   - android-sdk-preview-license-.+
@@ -21,7 +28,7 @@ notifications:
 
 before_install:
   - chmod +x gradlew
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
