--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,26 @@
 language: android
+sudo: false
 
 env:
   global:
    - ANDROID_API_LEVEL=28
    - EMULATOR_API_LEVEL=26
    - ANDROID_BUILD_TOOLS_VERSION=27.0.3
+   - ANDROID_ABI=armeabi-v7a
+   - ANDROID_TAG=google_apis
 
 android:
   components:
     - tools
-    - tools # Needs to be included twice.
     - platform-tools
+    - tools # Needs to be included twice.
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
     - android-$EMULATOR_API_LEVEL
 
     # Specify one system emimage
-    - sys-img-armeabi-v7a-android-26
+    - sys-img-armeabi-v7a-google_apis-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-google_apis-$EMULATOR_API_LEVEL
 
 licenses:
   - android-sdk-preview-license-.+
@@ -28,7 +32,8 @@ notifications:
 
 before_install:
   - chmod +x gradlew
-  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+#  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
