--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+jdk: oraclejdk8
 sudo: false
 
 env:
@@ -34,9 +35,8 @@ before_install:
   - chmod +x gradlew
   - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
 #  - echo no | android create avd --force -n test -t android-26 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -no-window &
   - android-wait-for-emulator
-  - adb shell input keyevent 82 &
 
 script:
    - ./gradlew build connectedCheck
