--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         </activity>
         <activity android:name=".SettingsActivity" />
         <activity android:name=".PatientAssignmentActivity" />
-        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".ListActivity" />
+        <activity android:name=".problemPopUp" />
+        <activity android:name=".recordInfoActivity"></activity>
     </application>
 
 </manifest>
