Added the necessary activities that will allow the user to assign patients or care providers

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".PatientAssignmentActivity"></activity>
+        <activity android:name=".PatientAssignmentActivity" />
+        <activity android:name=".accountSettingsActivity"></activity>
     </application>
 
 </manifest>
