--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
         <activity android:name=".SettingsActivity" />
         <activity android:name=".PatientAssignmentActivity" />
         <activity android:name=".ListActivity" />
-        <activity android:name=".problemPopUp" />
-        <activity android:name=".recordInfoActivity"></activity>
+        <activity android:name=".ProblemPopUp" />
+        <activity android:name=".RecordInfoActivity"></activity>
     </application>
 
 </manifest>
