Deleted the main problem info popup and implemented it inside the record list activity. Also implmented on some of the buttons with the problem and record list activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         <activity android:name=".SettingsActivity" />
         <activity android:name=".PatientAssignmentActivity" />
         <activity android:name=".ListActivity" />
-        <activity android:name=".ProblemPopUp" />
+        <activity android:name=".ProblemListActivity" />
+        <activity android:name=".RecordListActivity" />
         <activity android:name=".RecordInfoActivity"></activity>
     </application>
 
