--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,9 @@
 .ser
 .gradle
 /local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 *.ser
-/.idea/caches
+/.idea
