--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cybersix.markme">
-    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,8 +18,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BodyActivity"></activity>
-        <activity android:name=".LiveCameraActivity" android:exported="true"></activity>
+        <activity android:name=".BodyActivity" />
+        <activity
+            android:name=".LiveCameraActivity"
+            android:exported="true" />
+        <activity
+            android:name=".NavigationBar"
+            android:label="@string/title_activity_navigation_bar"></activity>
     </application>
 
 </manifest>
