--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity android:name=".BodyActivity"></activity>
         <activity android:name=".LiveCameraActivity" android:exported="true"></activity>
+        <activity android:name=".PatientListActivity" android:exported="true"></activity>
         <activity android:name=".SettingsActivity" />
         <activity android:name=".PatientAssignmentActivity" />
         <activity android:name=".ListActivity" />
