--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,15 +20,21 @@
         </activity>
         <activity
             android:name=".NavigationBar"
-            android:label="@string/title_activity_navigation_bar"></activity>
+            android:label="@string/title_activity_navigation_bar" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".PatientAssignmentActivity" />
         <activity android:name=".ListActivity" />
         <activity android:name=".ProblemListActivity" />
         <activity android:name=".RecordListActivity" />
-        <activity android:name=".RecordInfoActivity"></activity>
-        <activity android:name=".BodyActivity"></activity>
-        <activity android:name=".LiveCameraActivity" android:exported="true"></activity>
+        <activity android:name=".RecordInfoActivity" />
+        <activity android:name=".BodyActivity" />
+        <activity
+            android:name=".LiveCameraActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MapActivity"
+            android:label="@string/title_activity_map"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
