Renamed userID to username, implemented elasticsearch for searching users
- Renamed userID for convenience going forward, its easier to understand and works with elasticsearch.
- I also implemented elasticsearch for searching for users by username.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,6 @@
         <activity android:name=".RecordInfoActivity"></activity>
         <activity android:name=".BodyActivity"></activity>
         <activity android:name=".LiveCameraActivity" android:exported="true"></activity>
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
     </application>
-
 </manifest>
