--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,10 @@
         <activity android:name=".AccountSettingsActivity"></activity>
         <activity android:name=".SettingsActivity" />
         <activity android:name=".PatientAssignmentActivity" />
-        <activity android:name=".ListActivity" />
-        <activity android:name=".ProblemListActivity" />
-        <activity android:name=".RecordListActivity" />
-        <activity android:name=".PatientListActivity" android:exported="true"></activity>
+        <activity android:name=".ListFragment" />
+        <activity android:name=".ProblemListFragment" />
+        <activity android:name=".RecordListFragment" />
+        <activity android:name=".PatientListFragment" android:exported="true"></activity>
         <activity android:name=".RecordInfoActivity"></activity>
         <activity android:name=".BodyActivity" android:exported="true"></activity>
         <activity android:name=".LiveCameraActivity" android:exported="true"></activity>
