--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity android:name=".RecordListFragment" />
         <activity android:name=".PatientListFragment" android:exported="true"></activity>
         <activity android:name=".RecordInfoActivity"></activity>
-        <activity android:name=".BodyActivity" android:exported="true"></activity>
+        <activity android:name=".BodyFragment" android:exported="true"></activity>
         <activity android:name=".LiveCameraActivity" android:exported="true"></activity>
     </application>
 
