--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:parentActivityName=".LoginActivity" />
         <activity android:name=".AccountSettingsActivity" />
         <activity android:name=".SettingsActivity" />
-        <activity android:name=".PatientAssignmentActivity" />
+        <activity android:name=".UserAssignmentActivity" />
         <activity android:name=".ListActivity" />
         <activity android:name=".ProblemListActivity" />
         <activity android:name=".RecordListActivity" />
