--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,10 @@
         <activity android:name=".ProblemListActivity" />
         <activity android:name=".RecordListActivity" />
         <activity android:name=".RecordInfoActivity" />
-        <activity android:name=".ProblemActivityCreation"
-                  android:parentActivityName=".ProblemListActivity"
-                  android:theme="@style/AppTheme.PopUp"></activity>
+        <activity
+            android:name=".ProblemActivityCreation"
+            android:parentActivityName=".ProblemListActivity"
+            android:theme="@style/AppTheme.PopUp" />
         <activity
             android:name=".BodyActivity"
             android:exported="true" />
@@ -41,7 +42,8 @@
             android:name=".LiveCameraActivity"
             android:exported="true" />
         <activity android:name=".Reminder" />
-        <activity android:name=".Gallery"></activity>
+        <activity android:name=".Gallery" />
+        <activity android:name=".UserActivityAddPopUp"></activity>
     </application>
 
 </manifest>
