fixed the reminder

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ProblemActivityCreation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,9 +39,7 @@
         <activity android:name=".ProblemListActivity" />
         <activity android:name=".RecordListActivity" />
         <activity android:name=".RecordInfoActivity" />
-        <activity android:name=".ProblemActivityCreation"
-            android:parentActivityName=".ProblemListActivity"
-            android:theme="@style/AppTheme.PopUp"/>
+
         <activity android:name=".BodyActivity" />
         <activity
             android:name=".LiveCameraActivity"
