--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" android:exported="true"/>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,13 +33,7 @@
         <activity android:name=".LiveCameraActivity" android:exported="true"></activity>
         <activity android:name=".ProblemActivityCreation" android:theme="@style/AppTheme.PopUp"></activity>
         <activity android:name=".Reminder" />
-        <activity android:name=".AccountSettingsActivity" />
-        <activity android:name=".UserAssignmentFragment" />
         <activity android:name=".RecordCreationActivity" />
-        <activity
-            android:name=".MapActivity"
-            android:label="@string/title_activity_map"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".UserActivityAddPopUp"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
