Added fake data for the patient assignment. Also am trying to get the problems from the server in the problem controller

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
             android:theme="@style/AppTheme.PopUp" />
         <activity android:name=".Reminder" />
         <activity android:name=".RecordCreationActivity" />
-        <activity android:name=".UserActivityAddPopUp" />
+        <activity android:name=".UserActivityAddPopUp"
+                  android:theme="@style/AppTheme.PopUp"/>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
