--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver
+            android:name=".NotificationHandler"
+            android:enabled="true"
+            android:exported="true"></receiver>
         <activity
             android:name=".SignupActivity"
             android:parentActivityName=".LoginActivity" />
