--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation files('src/include/jest-droid-2.0.1-SNAPSHOT.jar')
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
