--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,33 +21,42 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".actvity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true" />
-        <activity android:name=".actvity.LoginActivity" android:theme="@style/AppTheme.NoActionBar">
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".actvity.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver
             android:name=".NotificationHandler"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
+
         <activity
             android:name=".actvity.SignupActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".actvity.LoginActivity" />
+            android:parentActivityName=".actvity.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".actvity.LiveCameraActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".actvity.ProblemCreationActivity"
             android:theme="@style/AppTheme.PopUp" />
         <activity android:name=".Reminder" />
-        <activity android:name=".actvity.RecordCreationActivity" android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".actvity.UserActivityAddPopUp" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".actvity.RecordCreationActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".actvity.UserActivityAddPopUp"
+            android:theme="@style/AppTheme.NoActionBar" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -61,8 +70,12 @@
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
-        <activity android:name=".actvity.MapSelectActivity" android:theme="@style/AppTheme.NoActionBar"/>
+
+        <activity
+            android:name=".actvity.MapSelectActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".deletePhoto" />
+        <activity android:name=".SlideShowActivity"></activity>
     </application>
 
 </manifest>
