--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,25 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_transparent_noname"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_transparent_noname"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".actvity.MainActivity"
             android:exported="true"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".actvity.LoginActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
 
         <receiver
@@ -39,21 +42,26 @@
 
         <activity
             android:name=".actvity.SignupActivity"
+            android:screenOrientation="portrait"
             android:parentActivityName=".actvity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".actvity.LiveCameraActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".actvity.ProblemCreationActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.PopUp" />
         <activity android:name=".Reminder" />
         <activity
             android:name=".actvity.RecordCreationActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".actvity.UserActivityAddPopUp"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <meta-data
@@ -72,9 +80,13 @@
 
         <activity
             android:name=".actvity.MapSelectActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".deletePhoto" />
-        <activity android:name=".SlideShowActivity"></activity>
+        <activity android:name=".deletePhoto"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SlideShowActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
